# Copyright 2022 The Dawn Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

################################################################################
# Build target aliases
# TODO(crbug.com/dawn/1275) - remove these
################################################################################
group("dawn_unittests") {
  public_deps = [ "../dawn/tests:unittests" ]
  testonly = true
}
group("dawn_end2end_tests") {
  public_deps = [ "../dawn/tests:end2end_tests" ]
  testonly = true
}
group("dawn_perf_tests") {
  public_deps = [ "../dawn/tests:perf_tests" ]
  testonly = true
}
